# qr-master

./: Cargo.toml  README.md  clippy.toml  qr-master.code-workspace
src/: config.rs  generator.rs  main.rs
