[package]
name = "qr-master"
version = "1.0.0"
authors = ["0xlay <0xlay.lab@gmail.com>"]
description = "A command-line tool for generating QR codes from data)"
homepage = "https://github.com/0xlay/qr-master/blob/master/README.md"
documentation = "https://github.com/0xlay/qr-master/blob/master/README.md"
repository = "https://github.com/0xlay/qr-master"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["cli", "tools"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
qrcode = "0.14.1"
image = "0.25.2"
